Todays clases partialy finished

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "chakra-dayzed-datepicker": "^0.2.9",
     "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^2.30.0",
+    "dayzed": "^3.2.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "framer-motion": "^10.12.16",
