--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/inter": "^5.0.3",
+    "@fontsource/apfel-grotezk": "^5.0.3",
+    "@fontsource/roboto": "^5.0.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
