--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^10.12.16",
     "next": "13.4.6",
     "react": "18.2.0",
+    "react-barcode": "^1.4.6",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "typescript": "5.1.3"
