--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
@@ -22,16 +23,22 @@
     "axios": "^1.4.0",
     "chakra-dayzed-datepicker": "^0.2.9",
     "cheerio": "^1.0.0-rc.12",
+    "cookies-next": "^2.1.2",
     "date-fns": "^2.30.0",
     "dayzed": "^3.2.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "flowbite-react": "^0.4.9",
     "framer-motion": "^10.12.16",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-barcode": "^1.4.6",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-slick": "^0.29.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
