--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@fontsource-variable/inter": "^5.0.3",
     "@fontsource/apfel-grotezk": "^5.0.3",
     "@fontsource/roboto": "^5.0.3",
+    "@fullcalendar/common": "^5.11.5",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
+    "@fullcalendar/timegrid": "^6.1.8",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
