--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "chakra-dayzed-datepicker": "^0.2.9",
     "cheerio": "^1.0.0-rc.12",
